# opencv-to-onnxruntime-cpp-cli

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main  main.cpp
